--- a/templates/index.html
+++ b/templates/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
     <title>Scraping Mission to Mars Information</title>
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <div style="background-color:rosybrown ;">
+    </div>
   </head>
   
-  <body style ="background-color: rgba(10, 10, 10, 0.856);" style="color: aliceblue;">
+  <body style ="background-color: rgba(248, 235, 234, 0.856);" >
     <div class="container">
       <!-- Add Jumbotron to Header -->
       <div class="jumbotron text-center">
@@ -22,12 +25,12 @@
       </div>
 
       <!-- Add section for Mars News -->
-      <div class="row" id="mars-news" style="color: aliceblue;">
+      <div class="row" id="mars-news">
         <div class="col-md-12">
           <h2 class="heading"><strong>Lastest Mars News</strong></h2>
           <div class="media">
             <div class="media-body">
-                <h4 style="color: aliceblue;" class="media-heading">{{mars.news_title}}</h4>
+                <h4 class="media-heading">{{mars.news_title}}</h4>
               <p>{{ mars.news_paragraph }}</p>
             </div>
           </div>
@@ -35,7 +38,7 @@
       </div>
 
       <!-- Section for Featured Image and Facts table -->
-      <div class="row" id="mars-featured-image" style="color: aliceblue;">
+      <div class="row" id="mars-featured-image" >
         <div class="col-md-8">
           <h2>Featured Mars Image</h2>
 
@@ -49,34 +52,25 @@
 
         <!-- Mars Facts -->
         <div class="col-md-4">  
-          <div class="row" id="mars-facts" style="color: aliceblue;">
+          <div class="row" id="mars-facts" >
             <h2>Mars Facts</h2>
+            <div style="margin: 20px;" style="background-color: seashell;">
               {{ mars.facts | safe }}
+            </div>
           </div>
         </div>
       </div>
 
-      <!-- weather -->
-      <div class="row" id="mars-weather" style="color: aliceblue;">
-        <div class="col-md-12" >
-          <h2>Current Weather on Mars</h2>
-          <hr size=2>
-          <div class="panel-body">
-            <p>{{mars.weather_tweets}}</p>
-          </div>
-        </div>  
-      </div>
-
       <!-- Section for Mars Hemispheres -->
-      <div class="row" id="mars-hemispheres" style="color: aliceblue;">
+      <div class="row" id="mars-hemispheres" >
         <div class="page-header">
-          <h2 class="text-center" style="color: aliceblue;">Mars Hemispheres</h2>
+          <h2 class="text-center">Mars Hemispheres</h2>
         </div>
 
         {% for hemisphere in mars.hemispheres %}
         <div class="col-md-6">
-          <div class="thumbnail">
-            <img src="{{hemisphere_img_urls | default('static/images/error.png', true)}}" alt="...">
+          <div class="thumbnail" style="margin: 20px;">
+            <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="...">
             <div class="caption">
               <h3>{{hemisphere.title}}</h3>
             </div>
